--- a/main.css
+++ b/main.css
@@ -54,6 +54,26 @@ float:left;
     margin-left: 2.0202%;        /*20÷990×100 */
     padding: 1.5em 2.52525% 0 0;  /*25÷990×100 */}
 img { max-width: 100%;}      /* width of main */
+div.gallery {
+  margin: 5px;
+  border: 1px solid #ccc;
+  float: left;
+  width: 180px;
+}
+
+div.gallery:hover {
+  border: 1px solid #777;
+}
+
+div.gallery img {
+  width: 100%;
+  height: auto;
+}
+
+div.desc {
+  padding: 15px;
+  text-align: center;
+}
 /* styles for the sidebar */
 aside { width: 35.35353%;       /*350÷990×100 */
 float:left;
@@ -62,6 +82,18 @@ margin: 1.5em 2.0202% 0 0;      /*20÷990×100 */}
 aside h2 { text-align: center; 
     font-family: Copperplate, Papyrus, fantasy;
     font-size: 1.25em;}
+label{
+    float: left;
+    width: 5em;
+    text-align: right;
+}
+input{
+    margin-left: 1em;
+    margin-bottom: .5em;
+}
+#button{
+    margin-left: 7em;
+}
 /* styles for the footer */
 footer {width: 100%;}        /*width of body*/
 footer p { font-size: .75em;
