--- a/main.css
+++ b/main.css
@@ -8,6 +8,10 @@ font-size: 100%;
 width:96%;
 max-width: 1200px;           /*maximum width of page */
 }
+h1 {
+text-align: center;
+font-family: Copperplate, Papyrus, fantasy;
+    font-size: 100%;}
 aside, h1, h2 {
     margin: 0;
     padding: 0;
@@ -74,6 +78,9 @@ div.desc {
   padding: 15px;
   text-align: center;
 }
+div p {margin-left: 6px;
+    margin-right: 6px;
+    flex-wrap: wrap;}
 /* styles for the sidebar */
 aside { width: 35.35353%;       /*350÷990×100 */
 float:left;
@@ -94,6 +101,8 @@ input{
 #button{
     margin-left: 7em;
 }
+div{
+    display: flex;} 
 /* styles for the footer */
 footer {width: 100%;}        /*width of body*/
 footer p { font-size: .75em;
@@ -103,3 +112,4 @@ text-align: right;
     text-align: center;
     color: darkcyan;
 margin-right: 2.0202%;           /* 20÷990×100 */}
+/* styles for the div */
