--- a/main.css
+++ b/main.css
@@ -1,11 +1,12 @@
 /* the styles for the type selectors */
 html{
-    background-color: #D8BFD8;
-    background: #E6E6FA;;
+    background-color: #D8BFD8 ;
+    background: #E6E6FA!important;
 }
 body{font-family: Copperplate, Papyrus, fantasy;
+    background: #E6E6FA!important;
 font-size: 100%;
-width:96%;
+width:100%;
 max-width: 1200px;           /*maximum width of page */
 }
 h1 {
@@ -68,7 +69,9 @@ div.gallery {
 div.gallery:hover {
   border: 1px solid #777;
 }
-
+div.class {
+    flex: auto;
+}
 div.gallery img {
   width: 100%;
   height: auto;
@@ -81,11 +84,6 @@ div.desc {
 div p {margin-left: 6px;
     margin-right: 6px;
     flex-wrap:wrap;}
-#accordion div {
-    overflow:auto;
-    height: 0;
-    transition: height 1s ease-in-out;
-}
 /* styles for the sidebar */
 aside { width: 35.35353%;       /*350÷990×100 */
 float:left;
@@ -111,7 +109,22 @@ div{
     display:flex;
     margin-top: auto;
 margin-bottom: auto;
-} 
+}
+/* Style the buttons that are used to open and close the accordion panel */
+.accordion {
+  background-color:#E6E6FA;
+  color: black;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  text-align: left;
+  border: none;
+  outline: none;
+  transition: 0.4s;
+}
+/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+.active, .accordion:hover {
+  background-color: skyblue;
 /* styles for the footer */
 footer {width: 100%;}        /*width of body*/
 footer p { font-size: .75em;
